# BrainBoard

./: .coverage  .gitignore  README.md  SETUP_SUMMARY.md  feedback.md  headsets.yaml  instance.py  main.py  poetry.toml  pyproject.toml  requirements-dev.txt  requirements.txt  setup_and_test.sh  simulation.py
notebooks/: left-right-and-rest-classification-core-copy.ipynb  left-right-and-rest-classification-core.ipynb
src/: models.py  preprocessing.py  train.py
src/egg_headset/: __init__.py  headset.py  model.py  ring_buffer.py
src/egg_headset/drivers/: __init__.py  brainaccess.py  mock.py  playback.py
src/inference/: __init__.py  loader.py  pipeline.py  starter_bci.py
src/speller/: __init__.py  speller.py  state.py
tests/: __init__.py  conftest.py  test_basic.py  test_integration.py  test_models.py  test_preprocessing.py
